prevgen/pirateapps/kustomize/overlays/sonarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  annotations:
    external-dns.alpha.kubernetes.io/hostname: sonarr.lab.tailandtraillabs.com
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`sonarr.lab.tailandtraillabs.com`)
      services:
        - name: sonarr
          port: 8989
  tls:
    secretName: wildcard-tls-prod
